--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>8</java.version>
+		<jib-maven-plugin.version>2.0.0</jib-maven-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
