create journal service refactoring architecture, creatde journal  entity

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -33,7 +33,6 @@ spring:
     hikari:
       poolName: Hikari
       auto-commit: false
-    initialization-mode: always
   h2:
     console:
       enabled: true
@@ -50,5 +49,8 @@ spring:
     cache-duration: PT1S # 1 second, see the ISO 8601 standard
   thymeleaf:
     cache: false
+  sql:
+    init:
+      mode: always
 server:
   port: 8080
