--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -1,5 +1,3 @@
-
-
 # ===================================================================
 # Standard Spring Boot properties.
 # Full reference is available at:
@@ -12,6 +10,9 @@ logging:
     com.wms: INFO
 
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
   devtools:
     restart:
       enabled: true
@@ -47,7 +48,6 @@ spring:
     cache-duration: PT1S # 1 second, see the ISO 8601 standard
   thymeleaf:
     cache: false
-
 server:
   port: 8081
 
